--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,327 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    tools:context=".MainActivity"
+    android:background="@color/white">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/judul"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:text="Form Pengisian Data"
+                android:textColor="@color/black"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            //info
+
+            <RelativeLayout
+                android:background="@drawable/kotak2"
+                android:id="@+id/kolomInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginRight="16dp"
+                android:padding="10dp">
+
+                <TextView
+                    android:id="@+id/teks1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Info"
+                    android:gravity="center"
+                    android:layout_marginTop="-20dp"
+                    android:padding="20dp"
+                    android:layout_marginLeft="-20dp"
+                    android:background="@drawable/lingkaran_info"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <RelativeLayout
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginRight="0dp"
+                    android:layout_marginBottom="16dp">
+
+                    <TextView
+                        android:id="@+id/teks2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/teks1"
+                        android:layout_marginTop="36dp"
+                        android:text="Form berikut ini bertujuan untuk memberikan informasi" />
+
+                    <TextView
+                        android:id="@+id/teks3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/teks2"
+                        android:text="kepada pusat agar mudah dilaporkan" />
+
+
+                </RelativeLayout>
+
+            </RelativeLayout>
+
+            //nik
+
+            <RelativeLayout
+                android:id="@+id/kolomNIK"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/titleNIK"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="24dp"
+                    android:text="NIK"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/isiNIK"
+                    android:layout_marginTop="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/titleNIK"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:hint="Masukkan NIK"
+                    android:background="@drawable/kotak_edit_text"
+                    android:padding="10dp"/>
+            </RelativeLayout>
+
+            //nama
+
+            <RelativeLayout
+                android:id="@+id/kolomNama"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/titleNama"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="24dp"
+                    android:text="Nama"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/harusdiisi1"
+                    android:layout_toRightOf="@id/titleNama"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="24dp"
+                    android:text="• Harus Diisi"
+                    android:textColor="@color/green"
+                    android:textStyle="bold" />
+
+
+                <EditText
+                    android:id="@+id/isiNama"
+                    android:layout_marginTop="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/titleNama"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:hint="Masukkan Nama"
+                    android:background="@drawable/kotak_edit_text"
+                    android:padding="10dp"/>
+            </RelativeLayout>
+
+            //Tanggal Lahir
+
+            <RelativeLayout
+                android:id="@+id/kolomTTL"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/titleTTL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="24dp"
+                    android:text="Tanggal Lahir"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/harusdiisi2"
+                    android:layout_toRightOf="@id/titleTTL"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="24dp"
+                    android:text="• Harus Diisi"
+                    android:textColor="@color/green"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:layout_marginTop="8dp"
+                    android:id="@+id/isiTTL"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/titleTTL"
+                    android:layout_marginLeft="16dp"
+                    android:background="@drawable/kotak_edit_text"
+                    android:layout_marginRight="16dp"
+                    android:padding="10dp"
+                    android:hint="Pilih Tanggal"
+                    android:drawableRight="@drawable/calendar"/>
+
+            </RelativeLayout>
+
+            //Jenis Kelamin
+            <RelativeLayout
+
+                android:id="@+id/kolomJK"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp">
+
+                <TextView
+                    android:id="@+id/titleJK"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_marginTop="24dp"
+                    android:text="Jenis Kelamin"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/harusdiisi3"
+                    android:layout_toRightOf="@id/titleJK"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="24dp"
+                    android:text="• Harus Diisi"
+                    android:textColor="@color/green"
+                    android:textStyle="bold" />
+
+                <RadioGroup
+                    android:layout_below="@id/titleJK"
+                    android:layout_width="match_parent"
+                    android:id="@+id/jk"
+                    android:layout_height="wrap_content"
+                    >
+                    <RadioButton
+                        android:layout_marginTop="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Laki - laki"
+                        android:id="@+id/jkLaki"/>
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Perempuan"
+                        android:id="@+id/jkPerempuan"/>
+                </RadioGroup>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/kolomHubungan"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp">
+
+                <TextView
+                    android:id="@+id/titleHubungan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Hubungan Dengan Anda"
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/harusdiisi4"
+                    android:layout_toRightOf="@id/titleHubungan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="10dp"
+                    android:text="• Harus Diisi"
+                    android:textColor="@color/green"
+                    android:textStyle="bold" />
+
+                <RadioGroup
+                    android:layout_below="@id/titleHubungan"
+                    android:layout_width="match_parent"
+                    android:id="@+id/hubungan"
+                    android:layout_height="wrap_content"
+                    >
+                    <RadioButton
+                        android:layout_marginTop="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Orangtua"
+                        android:id="@+id/orangTuaPilih"/>
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Suami/Istri"
+                        android:id="@+id/suamiIstriPilih"/>
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Anak"
+                        android:id="@+id/anakPilih"/>
+
+                    <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Kerabat Lainnya"
+                        android:id="@+id/kerabatPilih"/>
+                </RadioGroup>
+            </RelativeLayout>
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/kotak_button"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="25dp"
+                android:layout_marginTop="40dp"
+                android:text="Selanjutnya"
+                android:textColor="@color/white"/>
+        </LinearLayout>
+
+    </ScrollView>
+
+
+
+</LinearLayout>
