--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,11 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="yellow2">#FFF9E1</color>
+    <color name="yellow">#FFE283</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="input_text_color">#FAFAFA</color>
+    <color name="stroke_input_text_color">#EEEEEE</color>
+    <color name="green">#16A75C</color>
+
 </resources>
