--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -309,6 +309,7 @@
             </RelativeLayout>
 
             <Button
+                android:id="@+id/btnPindah"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/kotak_button"
